src/objects/User_Rollup_Field_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Field_Action__c</fullName>
        <inlineHelpText>The rollup action (MIN, MAX, SUM, COUNT) to be performed on the source field</inlineHelpText>
        <label>Field Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>The object this user rollup is mapped to</inlineHelpText>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <inlineHelpText>The source field and action from the object for this user rollup</inlineHelpText>
        <label>Source Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <inlineHelpText>The target field for placing the rolled-up value for this user defined rollup</inlineHelpText>
        <label>Target Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>User Rollup Field Settings</label>
</CustomObject>